--- a/templates/app/views/chaltron/users/_filters.html.erb
+++ b/templates/app/views/chaltron/users/_filters.html.erb
@@ -1,12 +1,11 @@
 <h4><%= t('.filters') %></h4>
 <%= simple_form_for filter, as: :filter, url: chaltron_users_path, method: 'get' do |f| %>
   <%= hidden_field_tag :page, 1 %>
-  <%= hidden_field_tag 'filter[providers][]', '' %>
   <% labels = providers.to_a.map do |x|
        "#{t("chaltron.users.provider.#{x.first}")} (#{number_with_delimiter(x.last, delimiter: '.')})"
      end %>
   <%= f.input :providers, collection: labels.zip(providers.keys).to_a,
-                          as: :check_boxes, wrapper: :vertical_collection_inline, include_hidden: false %>
+                          as: :check_boxes, wrapper: :vertical_collection_inline %>
   <%= f.input :never_logged_in, wrapper: :custom_boolean_switch, as: :boolean %>
   <%= f.submit t('.submit_filters'), class: 'btn btn-primary w-100' %>
 <% end %>
