fix url issue in sort and per_page shared partials

--- a/templates/app/views/shared/chaltron/_per_page.html.erb
+++ b/templates/app/views/shared/chaltron/_per_page.html.erb
@@ -8,7 +8,7 @@
       <% links.each do |count, label| %>
         <li>
         <%= link_to label,
-                    url.merge(request.params.merge(per_page: count, page: nil)),
+                    url.merge(per_page: count, page: 1),
                     class: class_names('dropdown-item', { active: per_page == count }) %>
         </li>
       <% end %>
