--- a/templates/app/views/shared/chaltron/_per_page.html.erb
+++ b/templates/app/views/shared/chaltron/_per_page.html.erb
@@ -7,8 +7,7 @@
     <ul class='dropdown-menu' aria-labelledby='per-page'>
       <% links.each do |count, label| %>
         <li>
-        <%= link_to label,
-                    url.merge(per_page: count, page: 1),
+        <%= link_to label, request.params.merge(per_page: count, page: 1),
                     class: class_names('dropdown-item', { active: per_page == count }) %>
         </li>
       <% end %>
