--- a/templates/app/views/chaltron/_login_navbar.html.erb
+++ b/templates/app/views/chaltron/_login_navbar.html.erb
@@ -12,7 +12,7 @@
         <li>
           <%= link_to chaltron_self_user_show_path,
                       class: class_names('dropdown-item', { active: active }) do %>
-            <%= icon :fas, :user, I18n.t('chaltron.menu.self_show') %>
+            <%= icon :fas, :user, t('chaltron.menu.self_show') %>
           <% end %>
         </li>
         <li>
