--- a/templates/app/views/chaltron/ldap/multi_new.html.erb
+++ b/templates/app/views/chaltron/ldap/multi_new.html.erb
@@ -35,7 +35,7 @@
     <% end %>
 
     <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline,
-                           collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] },
+                           collection: Chaltron::Role.all.map { |r| [t("chaltron/roles.#{r.name}"), r.id] },
                            label_class: 'col-sm-2 col-form-label' %>
 
     <%= f.submit t('.submit_text'), id: 'ldap_create_button',
