--- a/templates/app/views/shared/chaltron/_search.html.erb
+++ b/templates/app/views/shared/chaltron/_search.html.erb
@@ -1,7 +1,7 @@
 <% reset_label ||= t('.reset')
    submit_label ||= t('.submit') %>
 <%= form_tag nil, method: 'get' do %>
-  <div class='input-group mb-3'>
+  <div class='input-group'>
     <%= text_field_tag 'search', search,
                        class: 'form-control', placeholder: placeholder, size: 50 %>
     <span class='input-group-text'>
