--- a/templates/app/views/shared/chaltron/_sort.html.erb
+++ b/templates/app/views/shared/chaltron/_sort.html.erb
@@ -1,17 +1,23 @@
 <div id='sort' class='btn-group' role='group'>
-  <div class='btn-group' role='group'>
-    <button id='sort-column' type='button' class='btn btn-primary dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
+  <% if links.size > 1 %>
+    <div class='btn-group' role='group'>
+      <button id='sort-column' type='button' class='btn btn-primary dropdown-toggle' data-bs-toggle='dropdown' aria-expanded='false'>
+        <%= links[sort_column] %>
+      </button>
+      <ul class='dropdown-menu' aria-labelledby='sort-column'>
+        <% links.each do |sort, label| %>
+        <li>
+          <%= link_to label, request.params.merge(sort_column: sort, page: 1),
+                      class: class_names('dropdown-item', { active: sort_column == sort }) %>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  <% else %>
+    <div id='sort-column' class='btn btn-primary'>
       <%= links[sort_column] %>
-    </button>
-    <ul class='dropdown-menu' aria-labelledby='sort-column'>
-      <% links.each do |sort, label| %>
-      <li>
-        <%= link_to label, request.params.merge(sort_column: sort, page: 1),
-                    class: class_names('dropdown-item', { active: sort_column == sort }) %>
-      </li>
-      <% end %>
-    </ul>
-  </div>
+    </div>
+  <% end %>
   <%= link_to(
         request.params.merge(sort_direction: (sort_direction == 'asc' ? 'desc' : 'asc'), page: 1),
         class: 'btn btn-outline-primary'
