--- a/templates/app/views/home/_carousel.html.erb
+++ b/templates/app/views/home/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div id='main-carousel' class='carousel slide' data-bs-ride='carousel'>
+<div id="main-carousel" class="carousel slide" data-bs-ride="carousel">
 
   <ol class="carousel-indicators">
     <li data-bs-target="#main-carousel" data-bs-slide-to="0" class="active"></li>
@@ -6,33 +6,33 @@
     <li data-bs-target="#main-carousel" data-bs-slide-to="2"></li>
   </ol>
 
-  <div class='carousel-inner'>
-    <div class='carousel-item active'>
-      <%= image_tag('slide1.gif', class: 'd-block w-100 rounded-3') %>
-      <div class='carousel-caption d-none d-md-block'>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag("slide1.gif", class: "d-block w-100 rounded-3") %>
+      <div class="carousel-caption d-none d-md-block">
         <h1>Chaltron rulez!</h1>
       </div>
     </div>
-    <div class='carousel-item'>
-      <%= image_tag('slide2.gif', class: 'd-block w-100 rounded-3') %>
-      <div class='carousel-caption d-none d-md-block'>
+    <div class="carousel-item">
+      <%= image_tag("slide2.gif", class: "d-block w-100 rounded-3") %>
+      <div class="carousel-caption d-none d-md-block">
         <h1>Wow!</h1>
         <p>Looking good</p>
       </div>
     </div>
-    <div class='carousel-item'>
-      <%= image_tag('slide3.gif', class: 'd-block w-100 rounded-3') %>
-      <div class='carousel-caption d-none d-md-block'>
+    <div class="carousel-item">
+      <%= image_tag("slide3.gif", class: "d-block w-100 rounded-3") %>
+      <div class="carousel-caption d-none d-md-block">
         <h1>Not bad!</h1>
       </div>
     </div>
   </div>
 
-  <button class="carousel-control-prev" href="#main-carousel" role="button" data-bs-target='#main-carousel' data-bs-slide="prev">
+  <button class="carousel-control-prev" href="#main-carousel" role="button" data-bs-target="#main-carousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" href="#main-carousel" role="button" data-bs-target='#main-carousel' data-bs-slide="next">
+  <button class="carousel-control-next" href="#main-carousel" role="button" data-bs-target="#main-carousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
