--- a/templates/app/views/home/test.html.erb
+++ b/templates/app/views/home/test.html.erb
@@ -1,12 +1,12 @@
-<div class='bg-light rounded-3'>
-  <div class='container-fluid p-5 fs-4'>
-    <h1 class='display-5 fw-bold'>Test #<%= @test %></h1>
+<div class="bg-light rounded-3">
+  <div class="container-fluid p-5 fs-4">
+    <h1 class="display-5 fw-bold">Test #<%= @test %></h1>
     <p>
       Chaltron rocks!
       <%= icon :fas, :rocket %>
     </p>
-    <%= link_to :back, class: 'btn btn-primary' do %>
-      <%= icon :fas, 'arrow-left', t('chaltron.common.back') %>
+    <%= link_to :back, class: "btn btn-primary" do %>
+      <%= icon :fas, "arrow-left", t("chaltron.common.back") %>
     <% end %>
   </div>
 </div>
