--- a/templates/app/views/shared/chaltron/_search.html.erb
+++ b/templates/app/views/shared/chaltron/_search.html.erb
@@ -1,19 +1,19 @@
-<% reset_label ||= t('.reset')
-   submit_label ||= t('.submit') %>
-<%= form_tag nil, method: 'get' do %>
-  <div class='input-group'>
-    <%= text_field_tag 'search', search,
-                       class: 'form-control', placeholder: placeholder, size: 50 %>
-    <span class='input-group-text'>
-      <%= link_to icon(:fas, 'trash-alt'),
-                  { search: '', page: 1 },
+<% reset_label ||= t(".reset")
+   submit_label ||= t(".submit") %>
+<%= form_tag nil, method: "get" do %>
+  <div class="input-group">
+    <%= text_field_tag "search", search,
+                       class: "form-control", placeholder: placeholder, size: 50 %>
+    <span class="input-group-text">
+      <%= link_to icon(:fas, "trash-alt"),
+                  { search: "", page: 1 },
                   title: reset_label,
                   data: {
-                    controller: 'chaltron--tooltip',
-                    bs_toggle: 'tooltip',
-                    bs_trigger: 'hover'
+                    controller: "chaltron--tooltip",
+                    bs_toggle: "tooltip",
+                    bs_trigger: "hover"
                   } %>
     </span>
-    <button class='btn btn-primary' type='submit'><%= submit_label %></button>
+    <button class="btn btn-primary" type="submit"><%= submit_label %></button>
   </div>
 <% end %>
