--- a/templates/app/views/chaltron/_login_navbar.html.erb
+++ b/templates/app/views/chaltron/_login_navbar.html.erb
@@ -1,23 +1,23 @@
-<ul class='navbar-nav'>
+<ul class="navbar-nav">
   <% if signed_in? %>
       <%# Login navbar %>
-    <li class='nav-item dropdown'>
-      <% active = params[:controller] == 'chaltron/self_user'
-         klass = class_names('nav-link dropdown-toggle', { active: active }) %>
-      <%= link_to '#', id: 'navbarDropdownLogin', class: klass,
-                       data: { 'bs-toggle' => 'dropdown' } do %>
-        <%= display_user_avatar current_user, class: 'rounded-circle', size: 23 %>
+    <li class="nav-item dropdown">
+      <% active = params[:controller] == "chaltron/self_user"
+         klass = class_names("nav-link dropdown-toggle", { active: active }) %>
+      <%= link_to "#", id: "navbarDropdownLogin", class: klass,
+                       data: { "bs-toggle" => "dropdown" } do %>
+        <%= display_user_avatar current_user, class: "rounded-circle", size: 23 %>
       <% end %>
-      <ul class='dropdown-menu dropdown-menu-dark dropdown-menu-end' aria-labelledby='navbarDropdownLogin'>
+      <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDropdownLogin">
         <li>
           <%= link_to chaltron_self_user_show_path,
-                      class: class_names('dropdown-item', { active: active }) do %>
-            <%= icon :fas, :user, t('chaltron.menu.self_show') %>
+                      class: class_names("dropdown-item", { active: active }) do %>
+            <%= icon :fas, :user, t("chaltron.menu.self_show") %>
           <% end %>
         </li>
         <li>
-          <%= button_to destroy_local_session_path, class: 'dropdown-item', method: :delete do %>
-            <%= icon :fas, 'sign-out-alt', 'Logout' %>
+          <%= button_to destroy_local_session_path, class: "dropdown-item", method: :delete do %>
+            <%= icon :fas, "sign-out-alt", "Logout" %>
           <% end %>
         </li>
       </ul>
@@ -25,8 +25,8 @@
   <% else %>
   <li>
     <%= link_to new_local_session_path,
-                class: class_names('nav-link', { active: current_page?(new_local_session_path) }) do %>
-      <%= icon :fas, 'sign-in-alt', 'Login' %>
+                class: class_names("nav-link", { active: current_page?(new_local_session_path) }) do %>
+      <%= icon :fas, "sign-in-alt", "Login" %>
     <% end %>
   </li>
   <% end %>
