--- a/templates/app/views/chaltron/ldap/_entry.html.erb
+++ b/templates/app/views/chaltron/ldap/_entry.html.erb
@@ -1,14 +1,14 @@
 <tr>
   <td>
-    <%= custom_checkbox(id: "checkbox-#{entry.username}", class: 'entry',
+    <%= custom_checkbox(id: "checkbox-#{entry.username}", class: "entry",
                         data: {
                           entry: entry.username,
-                          chaltron__ldap_table_target: 'box',
-                          action: 'chaltron--ldap-table#toggleButton'
+                          chaltron__ldap_table_target: "box",
+                          action: "chaltron--ldap-table#toggleButton"
                         }) %>
   </td>
-  <td class='username'><%= entry.username %></td>
-  <td class='fullname'><%= display_entry_name(entry) %></td>
-  <td class='email'><%= display_entry_email(entry) %></td>
-  <td class='department'><%= entry.department %></td>
+  <td class="username"><%= entry.username %></td>
+  <td class="fullname"><%= display_entry_name(entry) %></td>
+  <td class="email"><%= display_entry_email(entry) %></td>
+  <td class="department"><%= entry.department %></td>
 </tr>
