--- a/templates/app/views/chaltron/users/_user.html.erb
+++ b/templates/app/views/chaltron/users/_user.html.erb
@@ -1,58 +1,58 @@
 <%= turbo_frame_tag dom_id(user),
-                    class: 'list-group-item list-group-item-action d-flex gap-3 py-3' do %>
-  <div class='d-flex gap-2 w-100 justify-content-between'>
-    <%= display_user_avatar user, size: 70, class: 'rounded align-self-center mx-2' %>
-    <div class='flex-grow-1'>
-      <h5 class='mb-0'>
+                    class: "list-group-item list-group-item-action d-flex gap-3 py-3" do %>
+  <div class="d-flex gap-2 w-100 justify-content-between">
+    <%= display_user_avatar user, size: 70, class: "rounded align-self-center mx-2" %>
+    <div class="flex-grow-1">
+      <h5 class="mb-0">
         <%= highlight(user.display_name, search) %>
         <%= safe_join(user.roles.map do |x|
-                        tag.span(t("chaltron/roles.#{x.name}"), class: 'badge bg-primary me-2')
+                        tag.span(t("chaltron/roles.#{x.name}"), class: "badge bg-primary me-2")
                       end) %>
       </h5>
-      <p class='mb-0 opacity-75'>
+      <p class="mb-0 opacity-75">
         <%= highlight(user.username, search) %>
-        <%= tag.span(t('chaltron.users.it_s_you'), class: 'badge bg-success me-2') if user == current_user %>
-        <%= tag.span(t('chaltron.users.user_disabled'), class: 'badge bg-danger me-2') if user.disabled? %>
+        <%= tag.span(t("chaltron.users.it_s_you"), class: "badge bg-success me-2") if user == current_user %>
+        <%= tag.span(t("chaltron.users.user_disabled"), class: "badge bg-danger me-2") if user.disabled? %>
       </p>
-      <p class='mb-0 opacity-75'><%= highlight(user.email, search) %></p>
-      <%= tag.p class: 'mb-0 opacity-75' do %>
+      <p class="mb-0 opacity-75"><%= highlight(user.email, search) %></p>
+      <%= tag.p class: "mb-0 opacity-75" do %>
         <%= highlight(user.department, search) %>
       <% end if user.department.present? %>
     </div>
-    <div class='d-flex flex-column justify-content-between'>
-      <div class='d-flex flex-column'>
-        <%= tag.small t('.created_ago', time: time_ago_in_words(user.created_at)),
-                      class: 'opacity-50 text-nowrap', title: l(user.created_at),
+    <div class="d-flex flex-column justify-content-between">
+      <div class="d-flex flex-column">
+        <%= tag.small t(".created_ago", time: time_ago_in_words(user.created_at)),
+                      class: "opacity-50 text-nowrap", title: l(user.created_at),
                       data: {
-                        controller: 'chaltron--tooltip',
-                        bs_toggle: 'tooltip', 'bs-placement': 'left'
+                        controller: "chaltron--tooltip",
+                        bs_toggle: "tooltip", "bs-placement": "left"
                       } %>
-        <small class='opacity-50 text-nowrap'>
+        <small class="opacity-50 text-nowrap">
           <span><%= Chaltron::User.human_attribute_name(:sign_in_count) %>: </span>
           <strong><%= number_with_delimiter(user.sign_in_count) %></strong>
         </small>
       </div>
-      <div class='mt-2 d-flex justify-content-end'>
+      <div class="mt-2 d-flex justify-content-end">
         <% if can? :edit, user %>
           <%= link_to edit_chaltron_user_path(user),
-                      class: 'btn btn-sm btn-primary' do %>
-            <%= icon :fas, 'pen-to-square' %>
+                      class: "btn btn-sm btn-primary" do %>
+            <%= icon :fas, "pen-to-square" %>
           <% end %>
           <% if user != current_user %>
             <%= button_to disable_chaltron_user_path(user),
-                          class: 'btn btn-sm btn-danger ms-1' do %>
-              <%= icon :fas, 'user-slash' %>
+                          class: "btn btn-sm btn-danger ms-1" do %>
+              <%= icon :fas, "user-slash" %>
             <% end if user.enabled? %>
             <%= button_to enable_chaltron_user_path(user),
-                          class: 'btn btn-sm btn-primary ms-1' do %>
+                          class: "btn btn-sm btn-primary ms-1" do %>
               <%= icon :fas, :user %>
             <% end if user.disabled? %>
           <% end %>
         <% end %>
         <%= button_to chaltron_user_path(user),
                       method: :delete,
-                      class: 'btn btn-sm btn-danger ms-1',
-                      form: { data: { turbo_confirm: 'Sicuro?' } } do %>
+                      class: "btn btn-sm btn-danger ms-1",
+                      form: { data: { turbo_confirm: "Sicuro?" } } do %>
           <%= icon :fas, :trash %>
         <% end if can?(:destroy, user) %>
       </div>
