--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -1,33 +1,33 @@
-<div class='row'>
-  <div class='col-md-3' id='filters'>
-    <%= render 'filters', filter: @filter, count: @count_filters %>
+<div class="row">
+  <div class="col-md-3" id="filters">
+    <%= render "filters", filter: @filter, count: @count_filters %>
   </div>
-  <div class='col-md-9'>
-    <div class='d-flex mb-3'>
+  <div class="col-md-9">
+    <div class="d-flex mb-3">
       <%# Search form %>
-      <div class='flex-grow-1'>
-        <%= render('shared/chaltron/search', placeholder: t('.search_placeholder')) %>
+      <div class="flex-grow-1">
+        <%= render("shared/chaltron/search", placeholder: t(".search_placeholder")) %>
       </div>
       <%# Per page %>
-      <div class='ms-3'>
-        <%= render 'shared/chaltron/per_page',
-                   links: [10, 20, 50, 100].index_with { |x| t('.per_page', count: x) } %>
+      <div class="ms-3">
+        <%= render "shared/chaltron/per_page",
+                   links: [10, 20, 50, 100].index_with { |x| t(".per_page", count: x) } %>
       </div>
       <%# Sort columns %>
-      <div class='ms-3'>
-        <%= render('shared/chaltron/sort',
+      <div class="ms-3">
+        <%= render("shared/chaltron/sort",
                    links: sort_columns.index_with do |x|
-                     "#{t('.sorted_by')} #{Chaltron::User.human_attribute_name(x).downcase}"
+                     "#{t(".sorted_by")} #{Chaltron::User.human_attribute_name(x).downcase}"
                    end) %>
       </div>
     </div>
 
-    <div class='list-group'>
-      <%= render partial: 'user', collection: @users %>
+    <div class="list-group">
+      <%= render partial: "user", collection: @users %>
     </div>
-    <div class='mt-3'>
+    <div class="mt-3">
       <%== pagy_info(@pagy) %>
-      <div class='float-end'>
+      <div class="float-end">
         <%== pagy_bootstrap_nav(@pagy) %>
       </div>
     </div>
