--- a/templates/app/views/chaltron/users/destroy.turbo_stream.erb
+++ b/templates/app/views/chaltron/users/destroy.turbo_stream.erb
@@ -1,7 +1,7 @@
 <% if current_user != @user %>
   <%= turbo_stream.remove dom_id(@user) %>
 <% end %>
-<%= turbo_stream.update 'filters' do %>
-  <%= render 'filters', filter: @filter, count: @count_filters %>
+<%= turbo_stream.update "filters" do %>
+  <%= render "filters", filter: @filter, count: @count_filters %>
 <% end %>
 <%= render_turbo_stream_flash_messages %>
