--- a/templates/app/views/chaltron/users/edit.html.erb
+++ b/templates/app/views/chaltron/users/edit.html.erb
@@ -1,5 +1,5 @@
-<div class='container-fluid'>
-  <h3><%= t('.title', user: @user.display_name) %></h3>
+<div class="container-fluid">
+  <h3><%= t(".title", user: @user.display_name) %></h3>
   <%= turbo_frame_tag dom_id(@user) do %>
     <%= simple_form_for @user, as: :chaltron_user, url: chaltron_user_path(@user), method: :patch,
                                namespace: @user.id, wrapper: :vertical_form do |f| %>
@@ -7,15 +7,15 @@
       <% if current_user == @user %>
         <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline, required: false,
                                collection: Chaltron::Role.all.map { |r| [t("chaltron/roles.#{r.name}"), r.id] },
-                               disabled: Chaltron::Role.where(name: 'user_admin').map(&:id) %>
+                               disabled: Chaltron::Role.where(name: "user_admin").map(&:id) %>
       <% else %>
         <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline, required: false,
                                collection: Chaltron::Role.all.map { |r| [t("chaltron/roles.#{r.name}"), r.id] } %>
       <% end %>
 
-      <%= f.submit t('.title', user: @user.display_name), class: 'btn btn-primary' %>
-      <%= link_to :back, class: 'btn btn-ligth' do %>
-        <%= icon :fas, :times, t('chaltron.common.cancel') %>
+      <%= f.submit t(".title", user: @user.display_name), class: "btn btn-primary" %>
+      <%= link_to :back, class: "btn btn-ligth" do %>
+        <%= icon :fas, :times, t("chaltron.common.cancel") %>
       <% end %>
     <% end %>
   <% end %>
