--- a/templates/app/views/devise/passwords/edit.html.erb
+++ b/templates/app/views/devise/passwords/edit.html.erb
@@ -1,20 +1,20 @@
-<div class='container w-50'>
-  <h4><%= t '.title' %></h4>
-  <div class='card'>
-    <div class='card-body'>
+<div class="container w-50">
+  <h4><%= t ".title" %></h4>
+  <div class="card">
+    <div class="card-body">
       <%= simple_form_for resource, as: resource_name, url: password_path(resource_name),
                                     wrapper: :horizontal_form, html: { method: :put } do |f| %>
         <%= f.error_notification %>
         <%= f.input :reset_password_token, as: :hidden %>
         <%= f.input :password, autofocus: true %>
         <%= f.input :password_confirmation %>
-        <div class='row mb-3'>
-          <div class='col-sm-9 offset-sm-3'>
-            <%= f.submit t('.submit_text'), class: 'btn btn-primary' %>
+        <div class="row mb-3">
+          <div class="col-sm-9 offset-sm-3">
+            <%= f.submit t(".submit_text"), class: "btn btn-primary" %>
           </div>
         </div>
         <hr>
-        <p><%= t '.par_html' %></p>
+        <p><%= t ".par_html" %></p>
       <% end %>
     </div>
   </div>
