--- a/templates/app/views/devise/passwords/new.html.erb
+++ b/templates/app/views/devise/passwords/new.html.erb
@@ -1,19 +1,19 @@
-<div class='container w-50'>
-  <h2><%= t '.title' %></h2>
-  <div class='card'>
-    <div class='card-body'>
+<div class="container w-50">
+  <h2><%= t ".title" %></h2>
+  <div class="card">
+    <div class="card-body">
       <%= simple_form_for resource, as: resource_name, url: password_path(resource_name),
                                     wrapper: :horizontal_form do |f| %>
         <%= f.error_notification %>
-        <p><%= t '.par1' %></p>
+        <p><%= t ".par1" %></p>
         <%= f.input :email, autofocus: true %>
-        <div class='row mb-3'>
-          <div class='col-sm-9 offset-sm-3'>
-            <%= f.submit t('.submit_text'), class: 'btn btn-primary' %>
+        <div class="row mb-3">
+          <div class="col-sm-9 offset-sm-3">
+            <%= f.submit t(".submit_text"), class: "btn btn-primary" %>
           </div>
         </div>
         <hr>
-        <p><%= t '.par2_html' %></p>
+        <p><%= t ".par2_html" %></p>
       <% end %>
     </div>
   </div>
