--- a/templates/app/views/layouts/application.html.erb.tt
+++ b/templates/app/views/layouts/application.html.erb.tt
@@ -2,24 +2,24 @@
 <html>
   <head>
     <title><%= app_const_base.titleize %></title>
-    <meta name='viewport' content='width=device-width,initial-scale=1'>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%%= csrf_meta_tags %>
     <%%= csp_meta_tag %>
 
-    <%%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload' %>
-    <%%= javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true %>
+    <%%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
-    <%%= render 'shared/chaltron/navbar' %>
-    <div id='flash' class='flash-container w-100 m-0 position-fixed top-0 text-center opacity-75'>
-      <%%= render 'shared/chaltron/flash' %>
+    <%%= render "shared/chaltron/navbar" %>
+    <div id="flash" class="flash-container w-100 m-0 position-fixed top-0 text-center opacity-75">
+      <%%= render "shared/chaltron/flash" %>
     </div>
-    <div id='content' class='container-fluid p-3 mx-auto'>
+    <div id="content" class="container-fluid p-3 mx-auto">
       <%%= yield %>
     </div>
-    <div class='pt-4'>
-      <%%= render 'shared/chaltron/footer' %>
+    <div class="pt-4">
+      <%%= render "shared/chaltron/footer" %>
     </div>
   </body>
 </html>
