--- a/templates/app/views/shared/chaltron/_footer.html.erb
+++ b/templates/app/views/shared/chaltron/_footer.html.erb
@@ -1,10 +1,10 @@
-<nav class='navbar fixed-bottom navbar-dark bg-dark py-0'>
-  <div class='container-fluid'>
-    <%= tag.div class: 'navbar-text' do %>
+<nav class="navbar fixed-bottom navbar-dark bg-dark py-0">
+  <div class="container-fluid">
+    <%= tag.div class: "navbar-text" do %>
       <%= icon(:fab, :github) %>
       Crafted with love and
-      <%= link_to 'chaltron', 'https://github.com/vicvega/chaltron-template', class: 'navbar-link' %>
+      <%= link_to "chaltron", "https://github.com/vicvega/chaltron-template", class: "navbar-link" %>
     <% end %>
-    <%= tag.div(revision, class: 'navbar-text') unless revision.nil? %>
+    <%= tag.div(revision, class: "navbar-text") unless revision.nil? %>
     </div>
 </nav>
