--- a/templates/app/views/chaltron/users/_users.html.erb
+++ b/templates/app/views/chaltron/users/_users.html.erb
@@ -17,7 +17,7 @@
       <div class="ms-3">
         <%= render("shared/chaltron/sort",
                    links: sort_columns.index_with do |x|
-                     "#{t(".sorted_by")} #{Chaltron::User.human_attribute_name(x).downcase}"
+                     "#{t('.sorted_by')} #{Chaltron::User.human_attribute_name(x).downcase}"
                    end) %>
       </div>
     </div>
